# CMake_demo

./: cmake_official.txt  cmake_official_dir.txt
1step/: CMakeLists.txt  tutorial.cxx
1tmp/: CMakeLists.txt
2step/: CMakeLists.txt  tutorial.cxx
2step/MathFunctions/: MathFunctions.h
2tmp/: CMakeLists.txt  runhello.sh
2tmp/doc/: hello.txt
2tmp/src/: CMakeLists.txt
3step/MathFunctions/: MathFunctions.h  mysqrt.cxx
3tmp/: CMakeLists.txt  readme.txt
3tmp/lib/: CMakeLists.txt  hello.c
4tmp/: CMakeLists.txt
4tmp/src/: CMakeLists.txt  main.c
5step/MathFunctions/: MathFunctions.h
5tmp/: CMakeLists.txt
5tmp/src/: CMakeLists.txt  main.c
6tmp/: CMakeLists.txt
6tmp/cmake/: FindHELLO.cmake
6tmp/src/: CMakeLists.txt  main.c
