ADD_EXECUTABLE(curltest main.c)
#include_directories(/usr/include)
#target_link_libraries(curltest curl)
find_package(CURL)
if(CURL_FOUND)
	include_directories(${CURL_INCLUDE_DIR})
	target_link_libraries(curltest ${CURL_LIBRARY})
else(NOT CURL_FOUND)
	message(FATA_ERROR "CURL library not found")
endif(CURL_FOUND)
